# RSSS

./: .gitignore  2.模块划分.md  Cargo.toml  agent生态有关检查.md  modify.md  readme.md  rust.md  scripting_review.md.resolved  如何解决同质化问题.md
agent_generator/: main.py  validator.py
agent_generator/output/: INVALID_atr_mean_reversion_v24.rhai  INVALID_imbalance_driven_mm_v22.rhai  INVALID_vwap_execution_v40.rhai  atr_mean_reversion_v0.rhai  atr_mean_reversion_v1.rhai  atr_mean_reversion_v10.rhai  atr_mean_reversion_v11.rhai  atr_mean_reversion_v12.rhai  atr_mean_reversion_v13.rhai  atr_mean_reversion_v14.rhai  atr_mean_reversion_v15.rhai  atr_mean_reversion_v16.rhai  atr_mean_reversion_v17.rhai  atr_mean_reversion_v18.rhai  atr_mean_reversion_v19.rhai  atr_mean_reversion_v2.rhai  atr_mean_reversion_v20.rhai  atr_mean_reversion_v21.rhai  atr_mean_reversion_v22.rhai  atr_mean_reversion_v23.rhai  atr_mean_reversion_v24.rhai  atr_mean_reversion_v25.rhai  atr_mean_reversion_v26.rhai  atr_mean_reversion_v27.rhai  atr_mean_reversion_v28.rhai  atr_mean_reversion_v29.rhai  atr_mean_reversion_v3.rhai  atr_mean_reversion_v30.rhai  (+1173 more)
docs/: 1.总纲.md  2.模块划分.md  README.md  RSSS 功能介绍.md  RSSS 技术架构与设计哲学 (System Architecture & Philosophy) v0.8.md  RSSS 接口与数据规范 (Interface & API Reference) v0.8.md  RSSS 智能体功能规范与生成指南.md  main.md
output/: market.csv  trades.csv
rs/: math.rs
scripts/: 01_market_maker.rhai  02_momentum.rhai  03_mean_reversion.rhai  04_noise_trader.rhai  05_rsi_contrarian.rhai
src/: domain.rs  engine.rs  lib.rs  main.rs  record.rs  scripting.rs  simulation.rs  tui.rs
(+43 files in other folders)
