[package]
name = "rsss"
version = "0.1.0"
edition = "2021"
description = "Rust Stock Simulation System - High-frequency microstructure market simulation"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rhai = { version = "1", features = ["sync", "no_float", "only_i64"] }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.11.0"
ratatui = "0.30.0"
crossterm = "0.29.0"

[dev-dependencies]
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
